# car-chase-tracking-system

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  CONTROLLER_GUIDE.md  README.md  build.sh  demo_controller.sh  start_webui.sh  test_system.cpp
backend/: app.py  requirements.txt
backend/templates/: index.html
src/: AdvancedCarTracker.cpp  AdvancedCarTracker.h  AdvancedTrackingSystem.cpp  AdvancedTrackingSystem.h  CarTracker.cpp  CarTracker.h  TrackingController.cpp  TrackingController.h  TrackingSystem.cpp  TrackingSystem.h  VehicleDetector.cpp  VehicleDetector.h  advanced_main.cpp  controller_main.cpp  main.cpp
webui/: index.html
